--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3.12"
-tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync"] }
+tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
 tokio-native-tls = "0.3.0"
 tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
 url = "2.2.0"
