--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ futures = "0.3.12"
 tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
 tokio-native-tls = "0.3.0"
 tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
+triggered = "0.1.1"
 url = "2.2.0"
