--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-complex = { version = "0.3.1", features = ["rand"] }
+rand = "0.7.0"
+
 futures = "0.3.12"
 tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
 tokio-native-tls = "0.3.0"
