--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-complex = { version = "0.3.1", features = ["rand"] }
-rand = "0.7.0"
-
 futures = "0.3.12"
 tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
 tokio-native-tls = "0.3.0"
 tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
 triggered = "0.1.1"
 url = "2.2.0"
+
+# Needed by the examples
+[dev-dependencies]
+num-complex = { version = "0.3.1", features = ["rand"] }
+rand = "0.7.0"
